examples/test/testpolicy11125.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11125
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key49: value22
      key35: value39
      key4: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value7
      podSelector:
        matchLabels:
          key1: value18
          key23: value14
          key45: value14
